--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>jackson-core</artifactId>
             <version>2.9.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
